syntax = "proto3";

option java_multiple_files = true;
option java_package = "books";

package books;

service BookService {
  rpc CreateBook (CreateBookRequest) returns (CreateBookResponse);
  rpc ReadBook (ReadBookRequest) returns (ReadBookResponse);
  rpc UpdateBook (UpdateBookRequest) returns (UpdateBookResponse);
  rpc DeleteBook (DeleteBookRequest) returns (DeleteBookResponse);
}

message BookProto {
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  int32 quantity = 5;
}

message CreateBookRequest {
  string title = 1;
  string author = 2;
  string isbn = 3;
  int32 quantity = 4;
}

message CreateBookResponse {
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  int32 quantity = 5;
}

message ReadBookRequest {
  string id = 1;
}

message ReadBookResponse {
  BookProto book = 1;
}

message UpdateBookRequest {
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  int32 quantity = 5;
}

message UpdateBookResponse {
  BookProto book = 1;
}

message DeleteBookRequest {
  string id = 1;
}

message DeleteBookResponse {
  string id = 1;
}
